--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,6 +15,18 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  build0:
+    runs-on: ubtuntu-latest
+    
+  steps:
+    - uses: actions/checkout@v2
+    - names: test run
+      run: |
+        echo 'this is a test run'
+        ls -l
+      
+    
+
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
