--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -8,7 +8,7 @@ on:
   push:
     branches: [ main ]
   pull_request:
-    branches: [ main ]
+    branches: [ dlsapient-patch-1 ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
