--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -21,7 +21,7 @@ jobs:
     strategy:
       matrix:
         node-version: [8.x, 10.x, 12.x]
-        os: [macos-latest, windows-latest, ubuntu-latest]
+        os: [ubuntu-latest]
     
     steps:
       - uses: actions/checkout@v2
