--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,8 +19,8 @@ jobs:
 #     runs-on: ubuntu-latest
     runs-on: ${{ matrix.os }}
     strategy:
-      matrix:
-        node-version: [8.x, 10.x, 12.x]
+      matrix: 
+        node-version: [8.x] # , 10.x, 12.x
         os: [ubuntu-latest]
     
     steps:
@@ -29,28 +29,36 @@ jobs:
         run: |
           echo 'this is a test run on ${{ matrix.os }}'
           ls -l
+          
+      # Run Linter against code base
+      - name: Lint Code Base
+        uses: docker://github/super-linter:v3
+        env:
+          VALIDATE_ALL_CODEBASE: false
+          DEFAULT_BRANCH: master
+        
       
     
 
-#   This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-    needs: [build0]
+# #   This workflow contains a single job called "build"
+#   build:
+#     # The type of runner that the job will run on
+#     runs-on: ubuntu-latest
+#     needs: [build0]
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+#     # Steps represent a sequence of tasks that will be executed as part of the job
+#     steps:
+#       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+#       - uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: |
-          echo Hello, world!
-          ls -a
+#       # Runs a single command using the runners shell
+#       - name: Run a one-line script
+#         run: |
+#           echo Hello, world!
+#           ls -a
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+#       # Runs a set of commands using the runners shell
+#       - name: Run a multi-line script
+#         run: |
+#           echo Add other actions to build,
+#           echo test, and deploy your project.
