--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -14,9 +14,9 @@ on:
   workflow_dispatch:
 
 jobs:
-  build0:
+  build:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-#     runs-on: ubuntu-latest # ${{ matrix.os }
     
     steps:
       - uses: actions/checkout@v2
